--- a/package.json
+++ b/package.json
@@ -1,5 +1,25 @@
 {
+  "name": "cherish-app",
+  "author": "Team 1",
+  "version": "1.0.0",
+  "main": "main.js",
+  "type": "module",
+  "scripts": {
+    "start-server": "http-server ./source -p 3000",
+    "test": "jest"
+  },
+  "license": "COMPSCI 326",
+  "description": "The Cherish App",
+  "dependencies": {
+    "@babel/preset-env": "^7.26.0",
+    "babel-jest": "^29.7.0",
+    "cherish-app": "file:",
+    "fake-indexeddb": "^6.0.0",
+    "http-server": "^14.1.1",
+    "ts-jest": "^29.2.5"
+  },
   "devDependencies": {
+    "@playwright/test": "^1.48.1",
     "jest": "^29.7.0"
   }
 }
