backend #104 : Changed test suite from jest to jasmine because of jest's experimental support for ESM modules. Test files need the "spec" suffix. run "npm test" to run tests. Jasmine comes with some sample code nested in the \spec directory in root.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "type": "module",
   "scripts": {
     "start-server": "http-server ./source -p 3000",
-    "test": "jest"
+    "test": "jasmine"
   },
   "license": "COMPSCI 326",
   "description": "The Cherish App",
@@ -20,6 +20,7 @@
   },
   "devDependencies": {
     "@playwright/test": "^1.48.1",
+    "jasmine": "^5.4.0",
     "jest": "^29.7.0"
   }
 }
