--- a/package.json
+++ b/package.json
@@ -5,22 +5,20 @@
   "main": "main.js",
   "type": "module",
   "scripts": {
-    "start-server": "http-server ./source -p 3000",
+    "start-server": "node back-end/src/Server.js",
     "test": "jasmine"
   },
   "license": "COMPSCI 326",
   "description": "The Cherish App",
   "dependencies": {
-    "@babel/preset-env": "^7.26.0",
-    "babel-jest": "^29.7.0",
     "cherish-app": "file:",
     "fake-indexeddb": "^6.0.0",
     "http-server": "^14.1.1",
-    "ts-jest": "^29.2.5"
+    "express": "^5.0.1",
+    "sequelize": "^6.37.5",
+    "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "@playwright/test": "^1.48.1",
-    "jasmine": "^5.4.0",
-    "jest": "^29.7.0"
+    "jasmine": "^5.4.0"
   }
 }
